# platform.upstream.libXrandr

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  libXrandr-1.4.0.tar.bz2.delta  libXrandr-1.4.0.tar.bz2.id  xrandr.pc.in
include/X11/extensions/: Xrandr.h
man/: Makefile.am  Xrandr.man
packaging/: baselibs.conf  libXrandr.changes  libXrandr.spec
src/: .cvsignore  .gitignore  Makefile.am  Xrandr.c  Xrandrint.h  XrrConfig.c  XrrCrtc.c  XrrMode.c  XrrOutput.c  XrrProperty.c  XrrProviderProperty.c  XrrScreen.c
